src/objects/Credit_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Pct_Daily_Rental_of_Elec_Income__c</fullName>
        <formula>IF ( BLANKVALUE( Electronic_Daily_Income__c , 0 )== 0, 0, BLANKVALUE( Rental_daily__c , 0 ) / Electronic_Daily_Income__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Daily Rental of Elec Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Daily_Rental_of_Total_Income__c</fullName>
        <formula>IF ( BLANKVALUE( Total_Daily_Income__c , 0 ) == 0, 0, BLANKVALUE( Rental_daily__c , 0 ) / Total_Daily_Income__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Daily Rental of Total Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Daily_repayments_of_Elec_income__c</fullName>
        <formula>IF ( BLANKVALUE( Electronic_Daily_Income__c , 0 )== 0, 0, BLANKVALUE( Daily_repayments__c , 0 ) / Electronic_Daily_Income__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Daily repayments of Elec income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Daily_repayments_of_Total_income__c</fullName>
        <formula>IF ( OR(ISBLANK( Total_Daily_Income__c ), Total_Daily_Income__c == 0 ), 0, BLANKVALUE(  Daily_repayments__c , 0 ) / Total_Daily_Income__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Daily repayments of Total income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Expenditure_of_Elec_Income__c</fullName>
        <formula>IF ( BLANKVALUE( Electronic_Daily_Income__c , 0 )== 0, 0, BLANKVALUE(  Total_Daily_Expenditure__c , 0 ) / Electronic_Daily_Income__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Expenditure of Elec Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Expenditure_of_Total_income__c</fullName>
        <formula>IF ( BLANKVALUE(  Total_Daily_Income__c , 0 )== 0, 0, BLANKVALUE( Total_Daily_Expenditure__c , 0 ) /  Total_Daily_Income__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Expenditure of Total income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Other_Fin_comm_of_Elec_Income__c</fullName>
        <formula>IF ( BLANKVALUE( Electronic_Daily_Income__c , 0 )== 0, 0, BLANKVALUE( Other_Financial_commitments_daily__c , 0 ) / Electronic_Daily_Income__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Other Fin. commitments of Elec Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Other_Fin_comm_of_Total_income__c</fullName>
        <formula>IF ( OR(ISBLANK( Total_Daily_Income__c ), Total_Daily_Income__c == 0 ), 0, BLANKVALUE(  Other_Financial_commitments_daily__c , 0 ) / Total_Daily_Income__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Other Fin. commitments of Total income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Principal_Daily_Repayment_Offer__c</fullName>
        <label>Principal Daily Repayment (Offer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Daily_Repayment_Requested__c</fullName>
        <formula>Opportunity__r.Principal_Daily_Repayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Daily Repayment (Requested)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Daily_Repayments_Approved__c</fullName>
        <formula>IF(Number_of_Repayments_Approved__c &lt;&gt;0,round((Approved_Loan_Amount__c/Number_of_Repayments_Approved__c),2),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Daily Repayment (Approved)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Weekly_Repayment_Offer__c</fullName>
        <label>Principal Weekly Repayment (Offer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Weekly_Repayment_Requested__c</fullName>
        <formula>Opportunity__r.Principal_Weekly_Repayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Weekly Repayment (Requested)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Weekly_Repayments_Approved__c</fullName>
        <label>Principal Weekly Repayment (Approved)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Notes__c</fullName>
        <label>Product Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Product_ASO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program_Product_ASO__c.Program__c</field>
                <operation>equals</operation>
                <valueField>$Source.Program__c</valueField>
            </filterItems>
            <filterItems>
                <field>Program_Product_ASO__c.Rules_Engine__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program_Product_ASO__c</referenceTo>
        <relationshipLabel>Credit Assessments</relationshipLabel>
        <relationshipName>Credit_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Credit Assessments</relationshipLabel>
        <relationshipName>Credit_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rental_daily__c</fullName>
        <label>Rental (daily)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <formula>Opportunity__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Loan_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <label>Requested Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Loan_Term__c</fullName>
        <formula>TEXT( Opportunity__r.Requested_Loan_Term__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Loan Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <formula>NULLVALUE(Opportunity__r.Owner.FirstName, &apos;&apos;)  + &apos; &apos;+   NULLVALUE(Opportunity__r.Owner.LastName, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Daily_Repayment_Approved__c</fullName>
        <label>Total Amount Daily Repayment (Approved)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Repayable_Approved__c</fullName>
        <formula>Approved_Loan_Amount__c + Interest_Amount_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Repayable (Approved)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Repayable_Offer__c</fullName>
        <label>Total Amount Repayable (Offer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Repayable_Requested__c</fullName>
        <formula>Opportunity__r.Quotation_Total_Repaid_Daily__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Repayable (Requested)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Avail_cashflow_no_rent__c</fullName>
        <formula>Total_Daily_Income__c - ( BLANKVALUE( Daily_repayments__c , 0 ) + BLANKVALUE( Other_Financial_commitments_daily__c , 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tot avail. cashflow (no Rent)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Avail_cashflow_with_rent__c</fullName>
        <formula>Total_Daily_Income__c - ( BLANKVALUE( Daily_repayments__c , 0 ) + BLANKVALUE( Other_Financial_commitments_daily__c , 0 ) + BLANKVALUE( Rental_daily__c , 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tot avail. cashflow (with Rent)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Charge_for_Credit__c</fullName>
        <formula>Total_Amount_Repayable_Approved__c - Approved_Loan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Charge for Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Daily_Expenditure__c</fullName>
        <formula>BLANKVALUE( Daily_repayments__c , 0 ) + BLANKVALUE( Rental_daily__c , 0 ) + BLANKVALUE( Other_Financial_commitments_daily__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Daily Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Daily_Income__c</fullName>
        <formula>BLANKVALUE(Electronic_Daily_Income__c, 0) +  BLANKVALUE(Cash_daily_income__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total daily income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Daily_Repayment_Approved__c</fullName>
        <formula>Principal_Daily_Repayments_Approved__c+Interest_Daily_Repayment_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Daily Repayment (Approved)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Daily_Repayment_Offer__c</fullName>
        <label>Total Daily Repayment (Offer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Daily_Repayment_Requested__c</fullName>
        <formula>Opportunity__r.Total_Amount_Repayable_Daily__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Daily Repayment (Requested)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Repayment__c</fullName>
        <label>Total Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Weekly_Amount_Repayable_Approved__c</fullName>
        <label>Total Weekly Amount Repayable (Approved)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Weekly_Amount_Repayable_Requested__c</fullName>
        <formula>Opportunity__r.Quotation_Total_Repaid_Weekly__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total WeeklyAmount Repayable (Requested)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Weekly_Repayment_Approved__c</fullName>
        <label>Total Weekly Repayment (Approved)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Weekly_Repayment_Offer__c</fullName>
        <label>Total Weekly Repayment (Offer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Weekly_Repayment_Requested__c</fullName>
        <formula>Opportunity__r.Total_Amount_Repayable_Weekly__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weekly Repayment (Requested)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trading_Name__c</fullName>
        <formula>Opportunity__r.Account.Business_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trading Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Daily_Repayment_Approved__c</fullName>
        <formula>ROUND(Program_Product_ASO__r.VAT__c*Interest_Daily_Repayment_Approved__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Daily Repayment (Approved)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Daily_Repayment_Offer__c</fullName>
        <formula>round(Program_Product_ASO__r.VAT__c*Interest_Daily_Repayment_Offer__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Daily Repayment (Offer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Daily_Repayment_Requested__c</fullName>
        <formula>Opportunity__r.VAT_Daily_Repayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Daily Repayment (Requested)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Verify__c</fullName>
        <label>Verify +</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WDA_Elec_sales__c</fullName>
        <label>WDA Elec. sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WMA_Elec_sales__c</fullName>
        <label>WMA Elec. sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Credit Assessment</label>
    <listViews>
        <fullName>My_Credit_Assessments</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>AMP_Credit_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Credit Assessments</label>
    </listViews>
    <listViews>
        <fullName>X0_Open_Credit_Assessment_HK</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>AMP_Credit_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Revert,On Hold,Revised</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Credit_Assessment__c.Credit_Assessment_Hong_Kong</value>
        </filters>
        <label>0 Open Credit Assessment (HK)</label>
        <queue>Credit_Assessment_Hong_Kong</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>Hong_Kong</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0_Open_Credit_Assessment_PP</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>AMP_Credit_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Revert,On Hold,Revised</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Credit_Assessment__c.Credit_Assessment_Philippines</value>
        </filters>
        <label>0 Open Credit Assessment (PP)</label>
        <queue>Credit_Assessment_Philippines</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>Philippines</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0_Open_Credit_Assessment_SG</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>AMP_Credit_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Revert,On Hold,Revised</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Credit_Assessment__c.Credit_Assessment_Singapore</value>
        </filters>
        <label>0 Open Credit Assessment (SG)</label>
        <queue>Credit_Assessment_Singapore</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>Singapore</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0_Open_Credit_Assessment_UK</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>AMP_Credit_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Revert,On Hold,Revised</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Credit_Assessment__c.Credit_Assessment_UK</value>
        </filters>
        <label>0 Open Credit Assessment (UK)</label>
        <queue>Credit_Assessment_UK</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>UK</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_Completed_Credit_Assessment_HK</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>AMP_Credit_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Credit_Assessment__c.Credit_Assessment_Completed_Hong_Kong</value>
        </filters>
        <label>1 Completed Credit Assessment (HK)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Hong_Kong</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_Completed_Credit_Assessment_PP</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>AMP_Credit_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Credit_Assessment__c.Credit_Assessment_Completed_Philippines</value>
        </filters>
        <label>1 Completed Credit Assessment (PP)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Philippines</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_Completed_Credit_Assessment_SG</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>AMP_Credit_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Credit_Assessment__c.Credit_Assessment_Completed_Singapore</value>
        </filters>
        <label>1 Completed Credit Assessment (SG)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Singapore</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_Completed_Credit_Assessment_UK</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>AMP_Credit_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Credit_Assessment__c.Credit_Assessment_Completed</value>
        </filters>
        <label>1 Completed Credit Assessment (UK)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>UK</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Credit Assessment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Assessments</pluralLabel>
    <recordTypes>
        <fullName>Credit_Assessment_Completed</fullName>
        <active>true</active>
        <description>Completed Credit Assessment for UK</description>
        <label>Credit Assessment Completed - UK</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Assessment_Completed_Hong_Kong</fullName>
        <active>true</active>
        <description>Completed Credit Assessment for Hong Kong</description>
        <label>Credit Assessment Completed - Hong Kong</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Assessment_Completed_Philippines</fullName>
        <active>true</active>
        <description>Completed Credit Assessment for Philippines</description>
        <label>Credit Assessment Completed - Philippines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Assessment_Completed_Singapore</fullName>
        <active>true</active>
        <description>Completed Credit Assessment for Singapore</description>
        <label>Credit Assessment Completed - Singapore</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Assessment_Hong_Kong</fullName>
        <active>true</active>
        <description>Credit Assessment belongs to Hong Kong</description>
        <label>Credit Assessment - Hong Kong</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Assessment_Philippines</fullName>
        <active>true</active>
        <description>Credit Assessment belongs to Philippines</description>
        <label>Credit Assessment - Philippines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Assessment_Singapore</fullName>
        <active>true</active>
        <description>Credit Assessment belongs to Singapore</description>
        <label>Credit Assessment - Singapore</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Assessment_UK</fullName>
        <active>true</active>
        <description>Credit Assessment belongs to UK</description>
        <label>Credit Assessment - UK</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_01_Additional_Information</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Additional_Information_Satisfactory__c,&apos;No&apos;), ISBLANK(Additional_Information_Details__c))</errorConditionFormula>
        <errorMessage>Please specify Additional Information Details</errorMessage>
    </validationRules>
</CustomObject>